# ktouchbar

./: .gitignore  Cargo.toml  LICENSE  LICENSE.mit  Makefile.toml  PERMISSIONS.md  PKGBUILD  README.md  ktouchbar.install
etc/dbus-1/system.d/: org.ktouchbar.Hardware.conf
etc/systemd/system/: ktouchbar-system.service
etc/systemd/user/: ktouchbar-user.service
etc/udev/rules.d/: 40-ktouchbar-permissions.rules  74-ktouchbar-uinput.rules  99-touchbar-ktouchbar.rules
share/ktouchbar/: WIDGETS.md
share/ktouchbar/configs/: config.toml
share/kwin/scripts/ktouchbar_dynamicshortcuts/: metadata.json
share/kwin/scripts/ktouchbar_dynamicshortcuts/contents/code/: main.js
src/: backlight.rs  battery_monitor.rs  config.rs  display.rs  dynamicshortcuts.rs  fonts.rs  icon_cache.rs  lib.rs  paths.rs  pixel_shift.rs  slider.rs  system_monitor.rs  user_cache.rs  widget.rs
src/display/: backlight.rs  mod.rs  pixel_shift.rs
src/widget/: battery.rs  content.rs  dynamicshortcuts.rs  icon.rs  layout.rs  mod.rs  slider.rs
