[package]
name = "ktouchbar"
version = "0.0.9"
edition = "2021"
license = "GPL-3.0-only"
description = "KTouchBar - Touch Bar daemon for KDE Plasma"
homepage = "https://github.com/Yossefosman/ktouchbar"
repository = "https://github.com/Yossefosman/ktouchbar.git"

[lib]
name = "ktouchbar"

[[bin]]
name = "ktouchbar-system"
path = "src/bin/system.rs"

[[bin]]
name = "ktouchbar-user"
path = "src/bin/user.rs"

[dependencies]
cairo-rs = { version = "0.20", default-features = false, features = ["freetype", "png"] }
librsvg-rebind = "0.1"
drm = "0.14"
anyhow = "1"
input = "0.8"
libc = "0.2"
input-linux = { version = "0.7", features = ["serde"] }
input-linux-sys = "0.9"
nix = { version = "0.29", features = ["event", "signal", "inotify"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
freetype-rs = "0.37"
freedesktop = { version = "0.0.3", default-features = false, features = ["core", "icon"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
udev = "0.9"
zbus = "3"
fontconfig = "0.10"
